style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

:root {
  --bgc: #f6f8fa;
  --purple: #6c63ff;
  --blue: #177ad0;
}

html {
  scroll-behavior: smooth;
}

html,
body {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  background-color: var(--bgc);
}

header,
header a {
  color: #fff
}

header {
  background: radial-gradient(circle at 10% 20%, rgb(126, 70, 195) 0%, rgb(156, 236, 247) 90%);
}

header div {
  transform: scale(1.1);
}

/* header fade ins */
header div div h1 {
  animation: fadeFromDirection .5s ease-in .125s forwards;
  opacity: 0;
}

header div div p:first-of-type {
  animation: fadeFromDirection .5s ease-in .25s forwards;
  opacity: 0;
}

header div div p:last-of-type {
  animation: fadeFromDirection .5s ease-in .5s forwards;
  opacity: 0;
}

header div div div {
  animation: fadeFromDirection .5s ease-in .75s forwards;
  opacity: 0;
}

section {
  padding: 0 15px;
}

header,
section:nth-of-type(2) {
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;

}

header div {
  padding: 0 15px;
}

main section:last-of-type {
  min-height: auto;
}

main section:first-of-type {
  padding: 5rem 1rem;
}

textarea {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: .81rem;
}

input,
textarea {
  border: 1px solid var(--purple);
}

header {
  padding: 5rem 0;
}

nav {
  position: fixed;
  padding: .5rem 2rem;
  width: 100%;
  display: flex;
  background-color: var(--bgc);
  z-index: 5;
  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

nav ul li {
  margin: 0 5px;
}

nav ul li a {
  text-decoration: none;
  font-weight: 200;
}

main {
  box-shadow: 0, 0, 5px #333;
  line-height: 1.5;
}

a {
  color: black;
  transition: .15s ease-in;
  font-weight: bold;
  text-underline-offset: 2px
}

a:nth-child(odd):hover {
  color: var(--purple);
  text-shadow: 0 0 5px #fff;
}

a:nth-child(even):hover {
  color: var(--blue);
  text-shadow: 0 0 5px #fff;
}

i {
  transition: .125s ease-in;
}

li i {
  font-size: 5rem;
}

footer a {
  text-decoration: none;
}

a i {
  margin: 0 10px;
  font-size: 2.5rem;
}

#skills div ul {
  width: 50%;
  margin: 0 auto;
}

nav ul li:nth-child(odd) a:hover,
.skills-ul li:nth-child(odd) i:hover {
  color: var(--purple);
}

nav ul li:nth-child(even) a:hover,
.skills-ul li:nth-child(even) i:hover {
  color: var(--blue);
}

ul li i {
  margin: .5rem 1rem;
}

h1,
h2 {
  margin: .75rem 0;
}

p,
div.form-field,
a {
  margin: .6rem 0;
}

footer,
footer>div {
  height: 5rem;
}


input,
textarea {
  padding: .25rem .5rem;
}

.menu-btn {
  cursor: pointer;
  display: none;
}

/* < !-- ! Font Awesome Pro 6.3.0 by @fontawesome - https: //fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --> */
.menu-btn:after {
  content: '';
  background-image: url("assets/icon.svg");
  background-repeat: no-repeat;
  display: flex;
  width: 25px;
  height: 25px;
}

.initials {
  text-decoration: none;
  font-family: 'Shantell Sans', cursive;
  font-size: 1.5rem;
  background: -webkit-linear-gradient(rgb(126, 70, 195) 0%,
      rgb(156, 236, 247) 90%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.bg-dark {
  color: #fff;
  background-color: #333;
  box-shadow: 0 0 10px -10px rgba(0, 0, 0, .3);
}

.bg-dark a {
  color: #fff;
}

.skills-ul {
  text-align: center;
  list-style-type: none;
}

.big-margin {
  margin: 10rem 0;
}

.lead {
  font-weight: 400;
  font-size: 3rem;
}

.sk {
  text-align: end;
}

.icon-size {
  font-size: 2rem;
  margin-bottom: 3rem;
}

.flex {
  display: flex;
}

.flex-center {
  align-items: center;
  justify-content: center;
}

.flex-around {
  justify-content: space-around;
}

.flex-between {
  justify-content: space-between
}

.flex-evenly {
  justify-content: space-evenly;
}

.flex-column {
  flex-direction: column;
}

.flex-end {
  justify-content: flex-end;
}

.flex-gap {
  gap: 50px;

}

.flex-wrap {
  flex-wrap: wrap;
}

.flex-wrap .card {
  margin-bottom: 1rem;
}

.w-full {
  width: 100%;
}

.mb-2 {
  margin: 2rem;
}

.profile {
  width: 20rem;
  height: 20rem;
  /* clip-path: circle(); */
  /* border-radius: 50%; */
  border-radius: 20px;
}

.section-margin {
  margin: 10rem 0 2rem 0;
}

.first-section-margin {
  margin: 0rem 0 2rem 0;
}

.first-section-margin div p,
.first-section-margin div h1,
.first-section-margin div div {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.small-section-spacing {
  padding: 5rem;
}

.skills-img-width {
  width: 175px;
}

.skill-text-area {
  max-width: 50%
}

.button {
  background: #fff;
  border: 1px solid var(--purple);
  padding: .3rem .75rem;
  transition: .15s ease-in;
  border-radius: 3px;
}

.button:hover {
  cursor: pointer;
  background-color: var(--purple);
  color: #fff;
}

.text-small {
  font-size: .9rem;
}

.project-img-width {
  width: 300px;
  margin-left: 2rem;
}

.h-f-s {
  font-size: .75rem;

}

.form-img {
  width: 25rem;
  margin-right: 1rem;
}

.mw {
  max-width: 500px;
}

.bold {
  font-weight: bold;
}


.skewed-card {
  width: 25rem;
  height: 691px;
  display: block;
  background-color: #fff;
  margin: 2rem 0;
  border-radius: 5px;
  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
  transition: .15s ease-in;
}

.skewed-card:nth-child(odd):hover {
  box-shadow: 0 0 5px var(--purple);
}

.skewed-card:nth-child(even):hover {
  box-shadow: 0 0 5px var(--blue);
}

.card-text {
  padding: 1.5rem;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: flex-start;
}

.card-img {
  height: 25rem;
  position: relative;
  overflow: hidden;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
}

.card-img::before {
  content: '';
  position: absolute;
  left: -4.5rem;
  top: 50%;
  transform: translateY(-50%) rotate(18deg);
  background-color: #fff;
  width: 40%;
  height: 140%;
  box-shadow: 0 0 25px rgba(0, 0, 0, .7);
  transition: box-shadow .15s ease-in;
}

.skewed-card:nth-child(odd) .card-img::before {
  box-shadow: 0 0 25px var(--purple)
}

.skewed-card:nth-child(even) .card-img::before {
  box-shadow: 0 0 25px var(--blue)
}

img {
  width: 140%;
}

.card-img,
.card-text {
  width: 100%;
}

.skewed-card .card-img::before {
  content: '';
  width: 120%;
  height: 40%;
  top: -5em;
  left: 50%;
  transform: translateX(-50%) rotate(10deg);
}

.about-padding {
  padding: 0 2rem
}

@media(max-width:825px) {
  .form-img {
    width: 75%
  }

  .project-flex {
    flex-direction: column;
    align-items: center;
  }

  .skill-text-area {
    max-width: 100%
  }

  .profile-outer {
    margin: 0 auto;
  }

}

@media(max-width:720px) {
  main section:last-of-type {
    flex-direction: column;
  }

  img.profile {
    margin: 0 auto;
    width: 15rem;
    height: 15rem;
  }

  .about-padding {
    padding: 0;
  }

  header div {
    transform: scale(1);
  }

  nav {
    height: 67.2px;
    overflow-y: hidden;
    transition: height .5s ease-in;
  }

  nav ul {
    overflow-y: hidden;
    flex-direction: column;
    margin-top: 80px;
    opacity: 0;
    transition: opacity .5s ease-in;
  }

  nav.active {
    height: 304px;
  }

  nav.active ul {
    opacity: 1;
  }

  .menu-btn {
    margin-top: 13.25px;
    display: block;
  }
}


@media(max-width:500px) {
  .lead {
    font-size: 2.25rem
  }

  #skills div ul {
    width: 100%
  }
}

@media (min-width:501px) {
  footer.flex-gap {
    gap: 200px;
  }
}


@keyframes fadeFromDirection {
  0% {
    opacity: 0;
    margin-left: -1rem;
  }

  100% {
    opacity: 1;
    margin-left: .99rem;
  }
}

